--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.min.css') }}">
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.css') }}">
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/load_animation.css') }}">
+
+
+
 		</head>
 		<body>
 
@@ -39,7 +43,7 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="#home">Home</a></li>
+				          <li class="menu-active"><a href="#">Home</a></li>
 				          <li><a href="{{ url_for('coin') }}">Coin toss</a></li>
 				          <li><a href="#die">Dice throw</a></li>
 				          <li><a href="#choice">Random choice</a></li>
