added dice functionality

--- a/templates/choice.html
+++ b/templates/choice.html
@@ -56,9 +56,9 @@
 					<nav id="nav-menu-container">
 						<ul class="nav-menu">
 							<li><a href="{{ url_for('index') }}">Home</a></li>
-							<li class="menu-active"><a href="{{ url_for('coin') }}">Coin toss</a></li>
+							<li><a href="{{ url_for('coin') }}">Coin toss</a></li>
 							<li><a href="{{ url_for('dice') }}">Dice throw</a></li>
-							<li><a href="{{ url_for('choice') }}">Random choice</a></li>
+							<li class="menu-active"><a href="{{ url_for('choice') }}">Random choice</a></li>
 						</ul>
 					</nav><!-- #nav-menu-container -->		    		
 				</div>
