added choice thingy

--- a/templates/coin.html
+++ b/templates/coin.html
@@ -70,7 +70,7 @@
 				<div class="row fullscreen d-flex align-items-center justify-content-center">
 					<div class="banner-content col-lg-8">
 						<h1>
-							Quantum coin toss
+							Coin toss
 						</h1>
 						<br>
 						<h3>
