--- a/templates/dice.html
+++ b/templates/dice.html
@@ -90,10 +90,10 @@
 							{% endif %}
 							<form id="tossthingy" action="" method="post">
 								Lower bound:<br>
-								<input type="text" name="lower" value="{{lower}}">
+								<input type="text" name="lower" value="{{lower}}" autocomplete="off">
 								<br>
 								Upper bound:<br>
-								<input type="text" name="upper" value="{{upper}}">
+								<input type="text" name="upper" value="{{upper}}" autocomplete="off">
 
 								<div class="twoToneCenter">
 									<button type="submit" class="btn twoToneButton btn-ladda">
