--- a/static/css/stuff.css
+++ b/static/css/stuff.css
@@ -1,7 +1,11 @@
-
-			.boxThing{
+.boxThing{
     display:inline-block;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    font-size:200px;
+    margin-bottom: 60px;
+    margin-top: 0px;
+    font-size:165px;
+}
+.simplePad{
+    display:inline-block;
+    margin-bottom: 6px;
+    margin-top: 20px;
 }
