--- a/templates/choice.html
+++ b/templates/choice.html
@@ -13,7 +13,7 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Startup</title>
-
+		<link rel="shortcut icon" href="#" />
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
 			CSS
@@ -26,6 +26,7 @@
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.min.css') }}">
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.css') }}">
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/stuff.css') }}">
 			<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/loadbtn.css') }}">
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/load_animation.css') }}">
 
@@ -44,6 +45,8 @@
 				margin: auto;
 			}
 		</style>
+
+
 	</head>
 	<body>
 
@@ -68,33 +71,47 @@
 		<section id="home">	
 			<div class="container">
 				<div class="row fullscreen d-flex align-items-center justify-content-center">
-					<div class="banner-content col-lg-7">
+					<div class="banner-content col-lg-8">
 						<h1>
-							Quantum coin toss
+							Random choice
 						</h1>
-						<br>
-						<h3>
-							<div class="volatile">Current state is {{toss}}:</div>
-						</h3>
-
-
-						<p class="pt-20 pb-20">
+						<p class="row pt-20 pb-20">
 							<div class="loader", id="loadanim" hidden>Loading...</div>
-							<img id="state" src="{{pic}}" alt="" class="img-responsive center-fit volatile">
+							<p class="boxThing volatile">
+								{{pick|safe}}
+							</p>
+							{% if error != '' %}
+							<!-- Display an error if reply is wrong -->
+							<div class="alert alert-danger" role="alert">
+								<strong>Error!</strong> {{error}}
+							</div>
+							{% endif %}
+							<div class="simplePad">
+							<form id="choices" action="" method="post">
+								Choose (enter an integer):<br>
+								<input type="text" name="size" value="{{size}}" autocomplete="off">
+								<br>
+								From (enter a comma-separated list):<br>
+								<input type="text" name="list" value="{{candidates_string}}" autocomplete="off">
 
-							<form id="tossthingy" action="" method="post">
 								<div class="twoToneCenter">
 									<button type="submit" class="btn twoToneButton btn-ladda">
 										<span class="lnr lnr">
-											Toss
+											Choose
 										</span>
 									</button>
 								</div>
 							</form>
+							</div>
 						</p>
-					</div>											
+						
+					</div>
+
 				</div>
 			</div>
+
+			
+
 		</section>
 
 
