added divs to keep form labels from overlapping.

--- a/templates/choice.html
+++ b/templates/choice.html
@@ -88,11 +88,10 @@
 							{% endif %}
 							<div class="simplePad">
 							<form id="choices" action="" method="post">
-								Choose (enter an integer):<br>
-								<input type="text" name="size" value="{{size}}" autocomplete="off">
-								<br>
-								From (enter a comma-separated list):<br>
-								<input type="text" name="list" value="{{candidates_string}}" autocomplete="off">
+								<div>Choose (enter an integer):</div>
+								<div><input type="text" name="size" value="{{size}}" autocomplete="off"></div>
+								<div>From (enter a comma-separated list):</div>
+								<div><input type="text" name="list" value="{{candidates_string}}" autocomplete="off"></div>
 
 								<div class="twoToneCenter">
 									<button type="submit" class="btn twoToneButton btn-ladda">
