--- a/templates/choice.html
+++ b/templates/choice.html
@@ -72,9 +72,11 @@
 			<div class="container">
 				<div class="row fullscreen d-flex align-items-center justify-content-center">
 					<div class="banner-content col-lg-8">
-						<h1>
-							Random choice
-						</h1>
+						<div>
+							<h1>
+								Random choice
+							</h1>
+						</div>
 						<p class="row pt-20 pb-20">
 							<div class="loader", id="loadanim" hidden>Loading...</div>
 							<p class="boxThing volatile">
