--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,10 @@
 			<script src="{{ url_for('static', filename='js/parallax.min.js') }}"></script>		
 			<script src="{{ url_for('static', filename='js/mail-script.js') }}"></script>	
 			<script src="{{ url_for('static', filename='js/main.js') }}"></script>	
+
+			<script type="text/javascript">
+				window.location.reload(true);
+			</script>
 		</body>
 		</html>
 
